--- a/video-player.html
+++ b/video-player.html
@@ -216,6 +216,7 @@
           "9": { link:'https://www.dropbox.com/scl/fi/guubes1mt50g1sih7ar90/DAN-DA-DAN-T2-Cap-9.mp4?rlkey=yvlgc6b461rgjkrt6qfuziekz&st=xq00noto&raw=1', title:'DAN DA DAN T2 Cap 9' },
           "10": { link:'https://www.dropbox.com/scl/fi/ll0vyhx3hah3paw6ba4l7/DAN-DA-DAN-T2-Cap-10.mp4?rlkey=n350hm7vpxvqb61zjial31uvw&st=p7nfkexi&raw=1', title:'DAN DA DAN T2 Cap 10' },
           "11": { link:'https://www.dropbox.com/scl/fi/7hkpp0ak0xk3didyzhqbe/DAN-DA-DAN-T2-Cap-11.mp4?rlkey=01g5v32yuat68m26b7o7ldn88&st=tv1po8wi&raw=1', title:'DAN DA DAN T2 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/54fb658xyaaav0gv9pmmh/DAN-DA-DAN-T2-Cap-12.mp4?rlkey=jbkm74e7fhxy71deqpknjupjf&st=q2cz09u1&raw=1', title:'DAN DA DAN T2 Cap 12' },
         }
       },
       "2": {
@@ -1710,6 +1711,30 @@
           "12": { link:'https://www.dropbox.com/scl/fi/cpjwihydwsrrsfdp7u0xh/My-Dress-Up-Darling-T2-Cap-12.mp4?rlkey=wvtrpokapcin5hj8dgf7rb88n&st=6efam0b0&raw=1', title:'My Dress-Up Darling T2 Cap 12' },
         }
       },
+      "47": {
+        "1": {
+          "1": { link:'https://www.dropbox.com/scl/fi/46lqzcwpqfn7slbmvy9hp/Hazbin-Hotel-T1-Cap-1.mp4?rlkey=1g6jfctjgm02d0m6xja11x5ut&st=hjt833fa&raw=1', title:'Hazbin Hotel T1 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/6s26ds3cbfsimz7asxwnn/Hazbin-Hotel-T1-Cap-2.mp4?rlkey=5gvu2ouhb1hgkqeuwikchbgey&st=7hsity9h&raw=1', title:'Hazbin Hotel T1 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/v4dwycqbmzv7x19hu5rfo/Hazbin-Hotel-T1-Cap-3.mp4?rlkey=d6cp0nbqvm2jalm8cqo6frf89&st=0gfag8l0&raw=1', title:'Hazbin Hotel T1 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/pqkhcf5nmlw1e3w94r6s9/Hazbin-Hotel-T1-Cap-4.mp4?rlkey=7qzl7rlxlgwfovpwirkor72bt&st=9bm15l3c&raw=1', title:'Hazbin Hotel T1 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/8xwg65uxueist8uhyhr4y/Hazbin-Hotel-T1-Cap-5.mp4?rlkey=zm5rju5z259ixwlv8iw1y3c6k&st=vd82j5tx&raw=1', title:'Hazbin Hotel T1 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/6vs69gv6ei4wgq8ks09p4/Hazbin-Hotel-T1-Cap-6.mp4?rlkey=wzfpjoh2oqldejlzmushsmfyu&st=znjkjjg4&raw=1', title:'Hazbin Hotel T1 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/b0ezysupjd009qu0ubiqt/Hazbin-Hotel-T1-Cap-7.mp4?rlkey=k93e64wowpyx5mk6g05gyqkk0&st=v3hph3ab&raw=1', title:'Hazbin Hotel T1 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/2kz30t1t2cw5xwrlawc52/Hazbin-Hotel-T1-Cap-8.mp4?rlkey=2wde6yt3i9zrsgggbw00fqd4p&st=v6kz9xj7&raw=1', title:'Hazbin Hotel T1 Cap 8' },
+        },
+        "2": {
+          "1": { link:'&raw=1', title:'Hazbin Hotel T2 Cap 1' },
+          "2": { link:'&raw=1', title:'Hazbin Hotel T2 Cap 2' },
+          "3": { link:'&raw=1', title:'Hazbin Hotel T2 Cap 3' },
+          "4": { link:'&raw=1', title:'Hazbin Hotel T2 Cap 4' },
+          "5": { link:'&raw=1', title:'Hazbin Hotel T2 Cap 5' },
+          "6": { link:'&raw=1', title:'Hazbin Hotel T2 Cap 6' },
+          "7": { link:'&raw=1', title:'Hazbin Hotel T2 Cap 7' },
+          "8": { link:'&raw=1', title:'Hazbin Hotel T2 Cap 8' },
+        }
+      },
+
+
 
     };
     // Guardar posición al volver
