--- a/anime-detail.html
+++ b/anime-detail.html
@@ -222,6 +222,7 @@
   <audio id="uzumaki-ost" loop><source src="https://www.dropbox.com/scl/fi/tq7x8abap01qs1jex5aqy/Uzumaki-Opening-theme-Song-Intro-Anime.mp3?rlkey=qjauevwei7uihfnvx8etdvl7f&st=iewsreh2&raw=1" type="audio/mpeg"></audio>
   <audio id="tondemo-ost" loop><source src="https://www.dropbox.com/scl/fi/z3nw0hlps4tjwqipc1axy/Tondemo-Skill-de-Isekai-Hourou-Meshi-Opening-Full-Luxury-Spoon-Van-de-Shop-Sub-Espa-ol-Latino.mp3?rlkey=vhlgiylxa9ej2tgy4q9wtf8vl&st=u7j9u5q1&raw=1" type="audio/mpeg"></audio>
   <audio id="muneca-ost" loop><source src="https://www.dropbox.com/scl/fi/arzidxum6qqn27x7o6mmb/MV-TV-anime-My-Dress-Up-Darling-Season-2-Opening-Theme.mp3?rlkey=cavkywi87u1cnli730obp0dee&st=p3y6xvxt&raw=1" type="audio/mpeg"></audio>
+  <audio id="hazbin-ost" loop><source src="https://www.dropbox.com/scl/fi/04uebc7tvm3l3zejmt9jo/m1.mp3?rlkey=9yq3w6i0hqp5qbc2ujs28ab9p&st=2wugb0mz&raw=1" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
   <div class="container">
@@ -2643,6 +2644,45 @@
           }
         ]
       },
+      47: {
+        title: "Hazbin Hotel",
+        desc: "Charlie, la princesa del Infierno, en su audaz intento de redimir demonios para aliviar la sobrepoblación en su reino de manera pacífica. Tras un exterminio anual decretado por el Cielo, Charlie inaugura un hotel con la esperanza de que los huéspedes lo abandonen una vez que demuestren la redención de sus almas.",
+        cover: "hhzz.jpg",
+        seasons: [
+          {
+            num: 1,
+            cover: "https://www.dropbox.com/scl/fi/8tzzytd8205p4mk00osmq/Airbrush-Image-Enhancer-1761696979492.jpg?rlkey=59ik39rxc8px9zpake98m5eah&st=5tjrba95&raw=1",
+            eps: [
+              { title: "Hazbin Hotel T1 Cap 1"},
+              { title: "Hazbin Hotel T1 Cap 2"},
+              { title: "Hazbin Hotel T1 Cap 3"},
+              { title: "Hazbin Hotel T1 Cap 4"},
+              { title: "Hazbin Hotel T1 Cap 5"},
+              { title: "Hazbin Hotel T1 Cap 6"},
+              { title: "Hazbin Hotel T1 Cap 7"},
+              { title: "Hazbin Hotel T1 Cap 8"},
+            ]
+          },
+          {
+            num: 2,
+            cover: "https://www.dropbox.com/scl/fi/nhh8b8z72djkh9386memp/Airbrush-Image-Enhancer-1761697102126.jpg?rlkey=wsn7ykzhgdnew145ws7ljxx08&st=ibo38l4p&raw=1",
+            eps: [
+              { title: "Hazbin Hotel T2 Cap 1"},
+              { title: "Hazbin Hotel T2 Cap 2"},
+              { title: "Hazbin Hotel T2 Cap 3"},
+              { title: "Hazbin Hotel T2 Cap 4"},
+              { title: "Hazbin Hotel T2 Cap 5"},
+              { title: "Hazbin Hotel T2 Cap 6"},
+              { title: "Hazbin Hotel T2 Cap 7"},
+              { title: "Hazbin Hotel T2 Cap 8"},
+            ]
+          }
+        ]
+      },
+
+
+
+
 
     };
 
@@ -2832,6 +2872,7 @@
         44: ['uzumaki-ost'],
         45: ['tondemo-ost'],
         46: ['muneca-ost'],
+        47: ['hazbin-ost'],
       };
 
       // no pausamos ni reseteamos nada aquí (tal como pediste)
