--- a/index.html
+++ b/index.html
@@ -325,9 +325,9 @@
 }
 
 /* ajuste extra para pantallas muy pequeñas (≤420px) */
-@media (max-width: 780px) {
+@media (max-width: 420px) {
   .card img {
-    height: 180px;     /* o 160px si prefieres más compacto */
+    height: 160px;
     object-fit: contain;
   }
 }
