--- a/index.html
+++ b/index.html
@@ -370,6 +370,12 @@
       50%  { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
+@media (max-width: 780px) {
+  .container{
+    margin: 1rem auto 1rem;   /* espacio superior aún menor en móviles */
+    padding: 0 0.9rem;
+  }
+
   </style>
 </head>
 <body>
